[project]
name = "vision-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "scipy>=1.15.3",
    "segmentation-refinement>=0.6",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]
